--- a/style.css
+++ b/style.css
@@ -1,17 +1,74 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
 
 body {
     background-color: #E5E5E5;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    padding: 1%;
+    min-height: 100%;
+}
+
+main {
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+aside {
+    padding: 1%;
+}
+
+main > textarea, main > textarea::placeholder {
+    color: #0A3871;
+    font-family: 'Inter';
+    opacity: 1;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 150%;
+}
+
+.button-group {
+    display: flex;
+    gap: 24px;
 }
 
 button {
     width: 680px;
+    border-radius: 24px;
+    padding: 24px;
+
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
 }
 
-primary-button {
-
+.primary-button {
+    background-color: #0A3871;
+    color: white;
 }
 
-secondary-button {
+.secondary-button {
+    background-color: #D8DFE8;
+    color: #0A3871;
+}
 
+.info-text {
+    margin-bottom: 8px;
+}
+
+.info-text > img {
+    vertical-align: middle;
+}
+
+img + p {
+    display: inline;
+    margin-left: 0.3em;
+    color: #495057;
+    margin-top: 0;
+    margin-bottom: 0;
 }
