--- a/style.css
+++ b/style.css
@@ -1,74 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    background-color: #E5E5E5;
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    padding: 1%;
-    min-height: 100%;
+    max-height: 100%;
+    background-color: #F3F5FC;
+    height: 80%;
 }
 
 main {
-    padding: 1%;
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    padding: 4%;
+    height: 100%;
+}
+
+.logo {
+    padding: 0% 4.2%;
+}
+
+.input {
+    padding: 5% 3%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-aside {
-    padding: 1%;
-}
-
-main > textarea, main > textarea::placeholder {
-    color: #0A3871;
+.input textarea,textarea::placeholder {
     font-family: 'Inter';
-    opacity: 1;
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
+    color: #0A3871;
+    background-color: #F3F5FC;
+    width: 98%;
+    height: 348px;
+    resize: none;
+    border: none;
+}
+
+.info-text {
+    margin-bottom: 20px;
+}
+
+.info-text p {
+    display: inline;
+    margin-left: 1px;
+}
+
+.result {
+    font-family: 'Inter';
+    text-align: center;
+    padding: 8%;
+
+    background: #FFFFFF;
+
+    box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
+    border-radius: 32px;
 }
 
 .button-group {
     display: flex;
-    gap: 24px;
+    width: 100%;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
 button {
-    width: 680px;
-    border-radius: 24px;
     padding: 24px;
+    width: 40%;
+    height: 67px;
 
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    text-align: center;
+    border-radius: 24px;
 }
 
 .primary-button {
-    background-color: #0A3871;
+    background: #0A3871;
     color: white;
 }
 
 .secondary-button {
-    background-color: #D8DFE8;
-    color: #0A3871;
-}
-
-.info-text {
-    margin-bottom: 8px;
-}
-
-.info-text > img {
-    vertical-align: middle;
-}
-
-img + p {
-    display: inline;
-    margin-left: 0.3em;
-    color: #495057;
-    margin-top: 0;
-    margin-bottom: 0;
+    background: #D8DFE8;
+    border: 1px solid #0A3871;
 }
