Corrigiendo selector de estilos para input
Textarea estaba apuntando a todos los textareas en lugar de solo al
que está adentro de la clase input

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ main {
     justify-content: space-between;
 }
 
-.input textarea,textarea::placeholder {
+.input textarea, .input textarea::placeholder {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
